--- a/themes/main.css
+++ b/themes/main.css
@@ -1,4 +1,4 @@
 body {
-  font-family: "微软雅黑";
+  font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", SimSun, "宋体", Heiti, "黑体", sans-serif;
   padding-top: 70px;
 }
